add Listing layout changes

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Angaben",
 	"arenella-recruiter-listing-renumeration": "",
 	"arenella-recruiter-listing-skills": "Fähigkeiten",
-	"arenella-recruiter-listing-step1": "1 von 5: Jobinfo",
-	"arenella-recruiter-listing-step2": "2 von 5: Stellenbeschreibung",
-	"arenella-recruiter-listing-step3": "3 von 5: Kontaktinformationen",
-	"arenella-recruiter-listing-step4": "4 von 5: Sprachen",
-	"arenella-recruiter-listing-step5": "5 von 5: Fähigkeiten",
+	"arenella-recruiter-listing-step1": "Rolleninformationen",
+	"arenella-recruiter-listing-step2": "Beschreibung",
+	"arenella-recruiter-listing-step3": "Kontaktinformationen",
+	"arenella-recruiter-listing-step4": "Erforderliche Sprachen",
+	"arenella-recruiter-listing-step5": "Erforderliche Fähigkeiten",
 	"arenella-recruiter-listing-title": "Titel",
 	"arenella-recruiter-listing-type": "Typ",
 	"arenella-recruiter-listing-views": "Ansichten",
