--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Recruiter Details",
 	"arenella-recruiter-listing-renumeration": "Remuneration",
 	"arenella-recruiter-listing-skills": "Skills",
-	"arenella-recruiter-listing-step1": "1 of 5: Job Info",
-	"arenella-recruiter-listing-step2": "2 of 5: Job Description",
-	"arenella-recruiter-listing-step3": "3 of 5: Contact information",
-	"arenella-recruiter-listing-step4": "4 of 5: Languages",
-	"arenella-recruiter-listing-step5": "5 of 5: Skills",
+	"arenella-recruiter-listing-step1": "Role Information",
+	"arenella-recruiter-listing-step2": "Description",
+	"arenella-recruiter-listing-step3": "Contact information",
+	"arenella-recruiter-listing-step4": "Required Languages",
+	"arenella-recruiter-listing-step5": "Required Skills",
 	"arenella-recruiter-listing-title": "Title",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Views",
