--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Detalles del reclutador",
 	"arenella-recruiter-listing-renumeration": "",
 	"arenella-recruiter-listing-skills": "Habilidades",
-	"arenella-recruiter-listing-step1": "1 de 5: Información del trabajo",
-	"arenella-recruiter-listing-step2": "2 de 5: Descripción del puesto",
-	"arenella-recruiter-listing-step3": "3 de 5: Información de contacto",
-	"arenella-recruiter-listing-step4": "4 de 5: Idiomas",
-	"arenella-recruiter-listing-step5": "5 de 5: Habilidades",
+	"arenella-recruiter-listing-step1": "Información del rol",
+	"arenella-recruiter-listing-step2": "Descripción",
+	"arenella-recruiter-listing-step3": "Información del contacto",
+	"arenella-recruiter-listing-step4": "Idiomas requeridos",
+	"arenella-recruiter-listing-step5": "Habilidades requeridas",
 	"arenella-recruiter-listing-title": "Título",
 	"arenella-recruiter-listing-type": "Tipo",
 	"arenella-recruiter-listing-views": "Puntos de vista",
