--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Détails du recruteur",
 	"arenella-recruiter-listing-renumeration": "Rémunération",
 	"arenella-recruiter-listing-skills": "Compétences",
-	"arenella-recruiter-listing-step1": "1 sur 5 : Informations sur l'emploi",
-	"arenella-recruiter-listing-step2": "2 sur 5 : Description du poste",
-	"arenella-recruiter-listing-step3": "3 sur 5 : Coordonnées",
-	"arenella-recruiter-listing-step4": "4 sur 5 : Langues",
-	"arenella-recruiter-listing-step5": "5 sur 5 : Compétences",
+	"arenella-recruiter-listing-step1": "Informations sur le rôle",
+	"arenella-recruiter-listing-step2": "Description",
+	"arenella-recruiter-listing-step3": "Coordonnées",
+	"arenella-recruiter-listing-step4": "Langues requises",
+	"arenella-recruiter-listing-step5": "Compétences requises",
 	"arenella-recruiter-listing-title": "Titre",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Vues",
