--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Dettagli del reclutatore",
 	"arenella-recruiter-listing-renumeration": "Compenso",
 	"arenella-recruiter-listing-skills": "Competenze",
-	"arenella-recruiter-listing-step1": "1 di 5: Informazioni sul lavoro",
-	"arenella-recruiter-listing-step2": "2 di 5: Descrizione del lavoro",
-	"arenella-recruiter-listing-step3": "3 di 5: Informazioni di contatto",
-	"arenella-recruiter-listing-step4": "4 di 5: Lingue",
-	"arenella-recruiter-listing-step5": "5 su 5: Abilità",
+	"arenella-recruiter-listing-step1": "Informazioni sul ruolo",
+	"arenella-recruiter-listing-step2": "Descrizione",
+	"arenella-recruiter-listing-step3": "Informazioni sui contatti",
+	"arenella-recruiter-listing-step4": "Lingue richieste",
+	"arenella-recruiter-listing-step5": "Competenze richieste",
 	"arenella-recruiter-listing-title": "Titolo",
 	"arenella-recruiter-listing-type": "Tipo",
 	"arenella-recruiter-listing-views": "Visualizzazioni",
