--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -462,11 +462,11 @@
 	"arenella-recruiter-listing-recruiter-details": "Recruitergegevens",
 	"arenella-recruiter-listing-renumeration": "Beloning",
 	"arenella-recruiter-listing-skills": "Vaardigheden",
-	"arenella-recruiter-listing-step1": "1 van 5: Taakinfo",
-	"arenella-recruiter-listing-step2": "2 van 5: Functiebeschrijving",
-	"arenella-recruiter-listing-step3": "3 van 5: Contactgegevens",
-	"arenella-recruiter-listing-step4": "4 van 5: Talen",
-	"arenella-recruiter-listing-step5": "5 van 5: Vaardigheden",
+	"arenella-recruiter-listing-step1": "Rol Informatie",
+	"arenella-recruiter-listing-step2": "Beschrijving",
+	"arenella-recruiter-listing-step3": "Contactgegevens",
+	"arenella-recruiter-listing-step4": "Vereiste talen",
+	"arenella-recruiter-listing-step5": "Vereiste vaardigheden",
 	"arenella-recruiter-listing-title": "Titel",
 	"arenella-recruiter-listing-type": "Type",
 	"arenella-recruiter-listing-views": "Keer bekeken",
