working recruiter listing minus extract language from spec

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -407,7 +407,7 @@
 	"arenella-recruiter-alerts-desc-2": "Um einen Suchalarm hinzuzufügen, führen Sie eine Suche im Kandidatenbildschirm durch und klicken Sie auf „Alarm erstellen“.",
 	"arenella-recruiter-alerts-name": "Name der Warnung",
 	"arenella-recruiter-alerts-title": "Suchalarme",
-	"arenella-recruiter-listing-add-skill": "Fertigkeit hinzufügen",
+	"arenella-recruiter-listing-add-skill": "Hinzufügen",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Filter extrahieren",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Extraktion durchführen",
 	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Andere Personalvermittler können Sie mit geeigneten Kandidaten kontaktieren.",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Datei hochladen",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Dateitypen von .doc, .docx und pdf bis zu 1 MB",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Text einfügen",
-	"arenella-recruiter-listing-btn-add-job": "Job hinzufügen",
+	"arenella-recruiter-listing-btn-add-job": "Rolle hinzufügen",
 	"arenella-recruiter-listing-btn-back": "Zurück",
 	"arenella-recruiter-listing-btn-confirm": "Bestätigen",
 	"arenella-recruiter-listing-btn-create-from-spec": "Spezifikation ",
