--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Upload File",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "File types of .doc, .docx and pdf up to 1MB",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Paste Text",
-	"arenella-recruiter-listing-btn-add-job": "Add Job",
+	"arenella-recruiter-listing-btn-add-job": "Add Role",
 	"arenella-recruiter-listing-btn-back": "Back",
 	"arenella-recruiter-listing-btn-confirm": "Confirm",
 	"arenella-recruiter-listing-btn-create-from-spec": "Create From Spec",
