--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Subir archivo",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Tipos de archivos .doc, .docx y pdf hasta 1 MB",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Pegar texto",
-	"arenella-recruiter-listing-btn-add-job": "Agregar trabajo",
+	"arenella-recruiter-listing-btn-add-job": "Agregar rol",
 	"arenella-recruiter-listing-btn-back": "Atrás",
 	"arenella-recruiter-listing-btn-confirm": "Confirmar",
 	"arenella-recruiter-listing-btn-create-from-spec": "Especificaciones",
