--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Caricare un file",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Tipi di file .doc, .docx e pdf fino a 1 MB",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Incolla testo",
-	"arenella-recruiter-listing-btn-add-job": "Aggiungi lavoro",
+	"arenella-recruiter-listing-btn-add-job": "Aggiungi ruolo",
 	"arenella-recruiter-listing-btn-back": "Indietro",
 	"arenella-recruiter-listing-btn-confirm": "Confermare",
 	"arenella-recruiter-listing-btn-create-from-spec": "Crea da specifiche",
