--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -407,7 +407,7 @@
 	"arenella-recruiter-alerts-desc-2": "Om een zoekwaarschuwing toe te voegen, voert u een zoekopdracht uit op het kandidatenscherm en klikt u op 'Waarschuwing maken'",
 	"arenella-recruiter-alerts-name": "Alert Naam",
 	"arenella-recruiter-alerts-title": "Zoek op Alerts",
-	"arenella-recruiter-listing-add-skill": "Vaardigheid toevoegen",
+	"arenella-recruiter-listing-add-skill": "Toevoegen",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Filters extraheren",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Voer extractie uit",
 	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Andere recruiters kunnen contact met u opnemen met geschikte kandidaten.",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Upload bestand",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Bestandstypen .doc, .docx en pdf tot 1MB",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Tekst plakken",
-	"arenella-recruiter-listing-btn-add-job": "Taak toevoegen",
+	"arenella-recruiter-listing-btn-add-job": "Rol toevoegen",
 	"arenella-recruiter-listing-btn-back": "Terug",
 	"arenella-recruiter-listing-btn-confirm": "Bevestigen",
 	"arenella-recruiter-listing-btn-create-from-spec": "Creëer van spec",
