--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -407,7 +407,7 @@
 	"arenella-recruiter-alerts-desc-2": "Pour ajouter une alerte de recherche, effectuez une recherche dans l'écran des candidats et cliquez sur « Créer une alerte »",
 	"arenella-recruiter-alerts-name": "Nom de l'alerte",
 	"arenella-recruiter-alerts-title": "Rechercher sur les alertes",
-	"arenella-recruiter-listing-add-skill": "Ajouter une compétence",
+	"arenella-recruiter-listing-add-skill": "Ajouter",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Extraire les filtres",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Effectuer l'extraction",
 	"arenella-recruiter-listing-box-upld-extract-filters-desc": "D'autres recruteurs pourront vous contacter avec des candidats appropriés.",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Téléverser un fichier",
 	"arenella-recruiter-listing-box-upld-extract-filters-file-type": "Types de fichiers .doc, .docx et pdf jusqu'à 1 Mo",
 	"arenella-recruiter-listing-box-upld-extract-tect": "Coller le texte",
-	"arenella-recruiter-listing-btn-add-job": "Ajouter un travail",
+	"arenella-recruiter-listing-btn-add-job": "Ajouter un rôle",
 	"arenella-recruiter-listing-btn-back": "Retour",
 	"arenella-recruiter-listing-btn-confirm": "Confirmer",
 	"arenella-recruiter-listing-btn-create-from-spec": "Créer des spéc",
