FE done with exception of search text

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Softwarearchitekt",
+	"ARCHITECT_SHORT": "Architekt",
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
 	"arenella-accounts-menu-candidates": "Kandidaten",
 	"arenella-accounts-menu-cities": "Städte",
@@ -708,7 +709,7 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "Die Zonenfunktion bietet Ihnen Zugriff auf Kandidaten in anderen Ländern als den von der Arenella-ICT-Plattform unterstützten Hauptländern. Sie ermöglicht auch eine schnellere Filterung nach Ländergruppen.",
 	"arenella-suggestions-paid-subscription-text-3": "Mit einem kostenpflichtigen Abonnement können Sie auf Kandidaten zugreifen, die im System sind, aber derzeit als an einem Projekt beteiligt markiert sind.",
 	"arenella-suggestions-paid-subscription-text-4": "Gesamtzahl nicht verfügbarer Kandidaten",
-	"arenella-suggestions-permanent": "",
+	"arenella-suggestions-permanent": "Dauerarbeit",
 	"arenella-suggestions-polish": "Polieren",
 	"arenella-suggestions-portuguese": "Portugiesisch",
 	"arenella-suggestions-profile-box-contact-btn-send": "Schicken",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "Zu",
 	"AUSTRIA": "Österreich",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "Belgien",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britische Inseln",
@@ -769,12 +771,14 @@
 	"CROATIA": "Kroatien",
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-Entwickler",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Zypern",
 	"CZECH": "Tschechisch",
 	"CZECH_REPUBLIC": "Tschechische Republik",
 	"DACH": "Dach",
 	"DANISH": "Dänisch",
 	"DATA_SCIENTIST": "Datenanalyst",
+	"DATA_SCIENTIST_SHORT": "Datenanalyst",
 	"DENMARK": "Dänemark",
 	"DUTCH": "Niederländisch",
 	"EASTERN_EUROPE": "Osteuropa",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "",
 	"IRELAND": "Irland",
 	"IT_RECRUITER": "IT-Recruiter",
+	"IT_RECRUITER_SHORT": "Rekrutierung",
 	"IT_SECURITY": "IT-Sicherheit",
+	"IT_SECURITY_SHORT": "Sicherheit",
 	"ITALIAN": "Italienisch",
 	"ITALY": "Italien",
 	"JAVA_DEV": "Java-Entwickler",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Niederlande",
 	"NETWORK_ADMINISTRATOR": "Netzwerkadministrator",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "",
 	"new-candidate-failure-title": "Versagen",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
 	"PROJECT_MANAGER": "Projektmanager",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "Belgien",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irland",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Anzeigen",
 	"show-filters": "Filter anzeigen",
 	"SIX_MONTHS_SUBSCRIPTION": "",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "Slowenien",
 	"SLOVENIAN": "Slowenisch",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Softwareentwickler",
+	"SOFTWARE_DEVELOPER_SHORT": "Softwareentwicklung",
 	"SOUTHERN_EUROPE": "Südeuropa",
 	"SPAIN": "Spanien",
 	"SPANISH": "Spanisch",
@@ -991,6 +1004,7 @@
 	"success": "Erfolg",
 	"suggestions-lang-na": "N / A",
 	"SUPPORT": "Support-Analyst",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Schweden",
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Truthahn",
 	"TURKISH": "Türkisch",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "Vereinigtes Königreich",
 	"UKRAINE": "Ukraine",
 	"UKRAINIAN": "Ukrainisch",
@@ -1006,6 +1021,7 @@
 	"URDU": "Urdu",
 	"US": "USA",
 	"WEB_DEV": "Webentwickler",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Westeuropa",
 	"WORLD": "Welt",
 	"WORLD_REMOTE": "Welt - Remote",
