--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Software Architect",
+	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Availability",
 	"arenella-accounts-menu-candidates": "Candidates",
 	"arenella-accounts-menu-cities": "Cities",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "TO",
 	"AUSTRIA": "Austria",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "Belgium",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "British Isles",
@@ -769,12 +771,14 @@
 	"CROATIA": "Croatia",
 	"CROATIAN": "Croatian",
 	"CSHARP_DEV": "C# Developer",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Czech",
 	"CZECH_REPUBLIC": "Czech Republic",
 	"DACH": "Dach",
 	"DANISH": "Danish",
 	"DATA_SCIENTIST": "Data Analyst",
+	"DATA_SCIENTIST_SHORT": "Data Analyst",
 	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "Years Experience",
 	"IRELAND": "Ireland",
 	"IT_RECRUITER": "IT Recruiter",
+	"IT_RECRUITER_SHORT": "Recruitment",
 	"IT_SECURITY": "IT Security",
+	"IT_SECURITY_SHORT": "Security",
 	"ITALIAN": "Italian",
 	"ITALY": "Italy",
 	"JAVA_DEV": "Java Developer",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Start Date",
 	"NETHERLANDS": "Netherlands",
 	"NETWORK_ADMINISTRATOR": "Network Administrator",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "Unable to add Candidate",
 	"new-candidate-failure-title": "Failure",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
 	"PROJECT_MANAGER": "Project Manager",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Russian",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Show",
 	"show-filters": "Show Filters",
 	"SIX_MONTHS_SUBSCRIPTION": "6 Months",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Slovenian",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Software Developer",
+	"SOFTWARE_DEVELOPER_SHORT": "Software Dev",
 	"SOUTHERN_EUROPE": "Southern Europe",
 	"SPAIN": "Spain",
 	"SPANISH": "Spanish",
@@ -991,6 +1004,7 @@
 	"success": "Success",
 	"suggestions-lang-na": "NA",
 	"SUPPORT": "Support analyst",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Sweeden",
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Turkey",
 	"TURKISH": "Turkish",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "United Kingdom",
 	"UKRAINE": "Ucraine",
 	"UKRAINIAN": "Ukrainian",
@@ -1006,6 +1021,7 @@
 	"URDU": "Urdu",
 	"US": "USA",
 	"WEB_DEV": "Web Developer",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Western Europe",
 	"WORLD": "World",
 	"WORLD_REMOTE": "World - Remote",
