--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Arquitecto de software",
+	"ARCHITECT_SHORT": "Arquitecto",
 	"arenella-accounts-menu-availability": "Disponibilidad",
 	"arenella-accounts-menu-candidates": "Candidatos",
 	"arenella-accounts-menu-cities": "Ciudades",
@@ -708,7 +709,7 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "La función Zona le brinda acceso a candidatos en países distintos de los principales países respaldados por la plataforma Arenella-ICT. También permite un filtrado más rápido por grupos de países.",
 	"arenella-suggestions-paid-subscription-text-3": "Con una suscripción paga puedes acceder a los candidatos que están en el sistema pero que actualmente están marcados como parte de un proyecto.",
 	"arenella-suggestions-paid-subscription-text-4": "Total de candidatos no disponibles",
-	"arenella-suggestions-permanent": "",
+	"arenella-suggestions-permanent": "Permanente",
 	"arenella-suggestions-polish": "Polaco",
 	"arenella-suggestions-portuguese": "Portugués",
 	"arenella-suggestions-profile-box-contact-btn-send": "Enviar",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "Bélgica",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Islas Británicas",
@@ -769,12 +771,14 @@
 	"CROATIA": "Croacia",
 	"CROATIAN": "Croata",
 	"CSHARP_DEV": "Desarrollador C#",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Chipre",
 	"CZECH": "Checo",
 	"CZECH_REPUBLIC": "República Checa",
 	"DACH": "Dach",
 	"DANISH": "Danés",
 	"DATA_SCIENTIST": "Analista de datos",
+	"DATA_SCIENTIST_SHORT": "Analista BI",
 	"DENMARK": "Dinamarca",
 	"DUTCH": "Holandés",
 	"EASTERN_EUROPE": "Europa Oriental",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutador de TI",
+	"IT_RECRUITER_SHORT": "Reclutamiento",
 	"IT_SECURITY": "Seguridad informatica",
+	"IT_SECURITY_SHORT": "Seguridad",
 	"ITALIAN": "Italiano",
 	"ITALY": "Italia",
 	"JAVA_DEV": "Desarrollador Java",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Fecha de inicio",
 	"NETHERLANDS": "Países Bajos",
 	"NETWORK_ADMINISTRATOR": "Administrador de red",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "BÁSICO",
 	"new-candidate-failure": "",
 	"new-candidate-failure-title": "Falla",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
 	"PROJECT_MANAGER": "Gerente de proyecto",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Ruso",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrar",
 	"show-filters": "Mostrar filtros",
 	"SIX_MONTHS_SUBSCRIPTION": "",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "Eslovenia",
 	"SLOVENIAN": "Esloveno",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Desarrollador de software",
+	"SOFTWARE_DEVELOPER_SHORT": "Desarrollo de software",
 	"SOUTHERN_EUROPE": "Europa del sur",
 	"SPAIN": "España",
 	"SPANISH": "Español",
@@ -991,6 +1004,7 @@
 	"success": "Éxito",
 	"suggestions-lang-na": "N / A",
 	"SUPPORT": "Analista de soporte",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Pavo",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "Reino Unido",
 	"UKRAINE": "Ucrania",
 	"UKRAINIAN": "Ucranio",
@@ -1006,6 +1021,7 @@
 	"URDU": "Urdu",
 	"US": "EE.UU",
 	"WEB_DEV": "Desarrollador web",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidental",
 	"WORLD": "Mundo",
 	"WORLD_REMOTE": "Mundo - Remoto",
