--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Architecte logiciel",
+	"ARCHITECT_SHORT": "Architecte",
 	"arenella-accounts-menu-availability": "Disponibilité",
 	"arenella-accounts-menu-candidates": "Candidats",
 	"arenella-accounts-menu-cities": "Villes",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "À",
 	"AUSTRIA": "L'Autriche",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "Belgique",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Îles Britanniques",
@@ -769,12 +771,14 @@
 	"CROATIA": "Croatie",
 	"CROATIAN": "Croate",
 	"CSHARP_DEV": "Développeur C#",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Chypre",
 	"CZECH": "Tchèque",
 	"CZECH_REPUBLIC": "République tchèque",
 	"DACH": "Dach",
 	"DANISH": "Danois",
 	"DATA_SCIENTIST": "Analyste de données",
+	"DATA_SCIENTIST_SHORT": "Analyste BI",
 	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "Années d'expérience",
 	"IRELAND": "Irlande",
 	"IT_RECRUITER": "Recruteur informatique",
+	"IT_RECRUITER_SHORT": "Recrutement",
 	"IT_SECURITY": "Sécurité informatique",
+	"IT_SECURITY_SHORT": "Sécurité",
 	"ITALIAN": "Italien",
 	"ITALY": "Italie",
 	"JAVA_DEV": "Développeur Java",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Date de début",
 	"NETHERLANDS": "Les Pays-Bas",
 	"NETWORK_ADMINISTRATOR": "Administrateur réseau",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basique",
 	"new-candidate-failure": "Impossible d'ajouter un candidat",
 	"new-candidate-failure-title": "Échec",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
 	"PROJECT_MANAGER": "Chef de projet",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Russe",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Montre",
 	"show-filters": "Afficher les filtres",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mois",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "La Slovénie",
 	"SLOVENIAN": "Slovène",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Développeur de logiciels",
+	"SOFTWARE_DEVELOPER_SHORT": "Développement",
 	"SOUTHERN_EUROPE": "Europe du sud",
 	"SPAIN": "Espagne",
 	"SPANISH": "Espanol",
@@ -991,6 +1004,7 @@
 	"success": "Succès",
 	"suggestions-lang-na": "NA",
 	"SUPPORT": "Analyste de soutien",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Suède",
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Dinde",
 	"TURKISH": "Turc",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "Royaume-Uni",
 	"UKRAINE": "Ukraine",
 	"UKRAINIAN": "Ukrainien",
@@ -1006,6 +1021,7 @@
 	"URDU": "Ourdou",
 	"US": "États-Unis",
 	"WEB_DEV": "Développeur Web",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
 	"WORLD": "Monde",
 	"WORLD_REMOTE": "Monde - À distance",
