--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Architetto del software",
+	"ARCHITECT_SHORT": "Architetto",
 	"arenella-accounts-menu-availability": "Disponibilità",
 	"arenella-accounts-menu-candidates": "Candidati",
 	"arenella-accounts-menu-cities": "Città",
@@ -708,7 +709,7 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "La funzione Zona ti consente di accedere a candidati in paesi diversi dai principali paesi supportati dalla piattaforma Arenella-ICT. Consente inoltre un filtraggio più rapido per gruppi di paesi.",
 	"arenella-suggestions-paid-subscription-text-3": "Con un abbonamento a pagamento puoi accedere ai candidati presenti nel sistema ma attualmente contrassegnati come impegnati in un progetto.",
 	"arenella-suggestions-paid-subscription-text-4": "Totale candidati non disponibili",
-	"arenella-suggestions-permanent": "Permanenza",
+	"arenella-suggestions-permanent": "A Stipendio",
 	"arenella-suggestions-polish": "Polacco",
 	"arenella-suggestions-portuguese": "Portoghese",
 	"arenella-suggestions-profile-box-contact-btn-send": "Inviare",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "Belgio",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Isole Britanniche",
@@ -769,12 +771,14 @@
 	"CROATIA": "Croazia",
 	"CROATIAN": "Croato",
 	"CSHARP_DEV": "Sviluppatore C#",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Cipro",
 	"CZECH": "Ceco",
 	"CZECH_REPUBLIC": "Repubblica Ceca",
 	"DACH": "Basso",
 	"DANISH": "Danese",
 	"DATA_SCIENTIST": "Analista di dati",
+	"DATA_SCIENTIST_SHORT": "Analista BI",
 	"DENMARK": "Danimarca",
 	"DUTCH": "Olandese",
 	"EASTERN_EUROPE": "Europa orientale",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "Anni di esperienza",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutatore informatico",
+	"IT_RECRUITER_SHORT": "Reclutamento",
 	"IT_SECURITY": "Sicurezza informatica",
+	"IT_SECURITY_SHORT": "Sicurezza",
 	"ITALIAN": "Italiano",
 	"ITALY": "Italia",
 	"JAVA_DEV": "Sviluppatore Java",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Data d'inizio",
 	"NETHERLANDS": "Olanda",
 	"NETWORK_ADMINISTRATOR": "Amministratore di rete",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Di base",
 	"new-candidate-failure": "Impossibile aggiungere il candidato",
 	"new-candidate-failure-title": "Fallimento",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
 	"PROJECT_MANAGER": "Responsabile del progetto",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Russo",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrare",
 	"show-filters": "Mostra filtri",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mesi",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Sloveno",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Sviluppatore di software",
+	"SOFTWARE_DEVELOPER_SHORT": "Sviluppo software",
 	"SOUTHERN_EUROPE": "Europa meridionale",
 	"SPAIN": "Spagna",
 	"SPANISH": "Spagnolo",
@@ -991,6 +1004,7 @@
 	"success": "Successo",
 	"suggestions-lang-na": "N / A",
 	"SUPPORT": "Analista di supporto",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Svezia",
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Tacchino",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "Regno Unito",
 	"UKRAINE": "Ucraina",
 	"UKRAINIAN": "Ucraino",
@@ -1006,6 +1021,7 @@
 	"URDU": "Italiano:",
 	"US": "U.S.A.",
 	"WEB_DEV": "Sviluppatore Web",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidentale",
 	"WORLD": "Mondo",
 	"WORLD_REMOTE": "Mondo - Remoto",
