--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,5 +1,6 @@
 {
 	"ARCHITECT": "Softwarearchitect",
+	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
 	"arenella-accounts-menu-candidates": "Kandidaten",
 	"arenella-accounts-menu-cities": "Steden",
@@ -754,6 +755,7 @@
 	"arenella-suggestions-to": "Naar",
 	"AUSTRIA": "Oostenrijk",
 	"BA": "Business Analyst",
+	"BA_SHORT": "BA",
 	"BELGIUM": "België",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britse eilanden",
@@ -769,12 +771,14 @@
 	"CROATIA": "Kroatie",
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-ontwikkelaar",
+	"CSHARP_DEV_SHORT": "C#",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Tsjechisch",
 	"CZECH_REPUBLIC": "Tsjechische Republiek",
 	"DACH": "Dach",
 	"DANISH": "Deens",
 	"DATA_SCIENTIST": "Data-analist",
+	"DATA_SCIENTIST_SHORT": "Data Analist",
 	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
@@ -838,10 +842,13 @@
 	"info-item-title-years-experience": "Jaren ervaring",
 	"IRELAND": "Ierland",
 	"IT_RECRUITER": "IT-recruiter",
+	"IT_RECRUITER_SHORT": "Werving",
 	"IT_SECURITY": "IT beveiliging",
+	"IT_SECURITY_SHORT": "Beveiliging",
 	"ITALIAN": "Italiaans",
 	"ITALY": "Italie",
 	"JAVA_DEV": "Java-ontwikkelaar",
+	"JAVA_DEV_SHORT": "Java",
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -868,6 +875,7 @@
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Nederland",
 	"NETWORK_ADMINISTRATOR": "Netwerkbeheerder",
+	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basis",
 	"new-candidate-failure": "Kan kandidaat niet toevoegen",
 	"new-candidate-failure-title": "Fout",
@@ -896,6 +904,8 @@
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
 	"PROJECT_MANAGER": "Projectleider",
+	"PROJECT_MANAGER_SHORT": "PM",
+	"QA_SHORT": "QA",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -943,6 +953,7 @@
 	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"SCRUM_MASTER": "Scrum Master",
+	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Laten zien",
 	"show-filters": "Filters weergeven",
 	"SIX_MONTHS_SUBSCRIPTION": "6 maanden",
@@ -951,7 +962,9 @@
 	"SLOVENIA": "Slovenië",
 	"SLOVENIAN": "Sloveens",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
+	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Softwareontwikkelaar",
+	"SOFTWARE_DEVELOPER_SHORT": "Softwareontwikkeling",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
 	"SPAIN": "Spanje",
 	"SPANISH": "Spaans",
@@ -991,6 +1004,7 @@
 	"success": "Succes",
 	"suggestions-lang-na": "NA",
 	"SUPPORT": "Ondersteuningsanalist",
+	"SUPPORT_SHORT": "Support",
 	"SWEDEN": "Zweden",
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
@@ -999,6 +1013,7 @@
 	"TURKEY": "Kalkoen",
 	"TURKISH": "Turks",
 	"UI_UX": "UI/UX",
+	"UI_UX_SHORT": "UI\\UX",
 	"UK": "Verenigd Koninkrijk",
 	"UKRAINE": "Oekraïne",
 	"UKRAINIAN": "Oekraïens",
@@ -1006,6 +1021,7 @@
 	"URDU": "Urdu",
 	"US": "VS",
 	"WEB_DEV": "Webontwikkelaar",
+	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "West-Europa",
 	"WORLD": "Wereld",
 	"WORLD_REMOTE": "Wereld - Remote",
