bug fix listing stats, listing user stats, ita spelling, city list

--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -117,7 +117,7 @@
 	"arenella-create-candidate-additional-info-title": "Informazioni aggiuntive",
 	"arenella-create-candidate-agreement": "Caricando il tuo CV e il tuo profilo accetti che il tuo CV e i tuoi dettagli vengano archiviati nel Sistema e condivisi all'interno della rete di reclutatori e clienti.",
 	"arenella-create-candidate-btn-save": "Salva",
-	"arenella-create-candidate-contract": "Contrarre",
+	"arenella-create-candidate-contract": "Contratto",
 	"arenella-create-candidate-contract-rate": "Tasso di contratto",
 	"arenella-create-candidate-curriculum": "Programma scolastico",
 	"arenella-create-candidate-day": "Giorno",
@@ -228,7 +228,7 @@
 	"arenella-listing-contract-today": "Oggi",
 	"arenella-listing-contract-type": "Tipo di contratto",
 	"arenella-listing-contract-type-both": "Entrambi",
-	"arenella-listing-contract-type-contract": "Contrarre",
+	"arenella-listing-contract-type-contract": "Contratto",
 	"arenella-listing-contract-type-perm": "Permanenza",
 	"arenella-listing-contract-week": "Questa settimana",
 	"arenella-listing-country": "Paese",
@@ -297,7 +297,7 @@
 	"arenella-new-candidate-btn-delete": "Elimina",
 	"arenella-new-candidate-btn-publish": "Pubblicare",
 	"arenella-new-candidate-candidate-id": "ID candidato",
-	"arenella-new-candidate-contract": "Contrarre",
+	"arenella-new-candidate-contract": "Contratto",
 	"arenella-new-candidate-country": "Paese",
 	"arenella-new-candidate-curriculum": "Programma scolastico",
 	"arenella-new-candidate-day": "Giorno",
@@ -481,7 +481,7 @@
 	"arenella-recruiter-mp-add-btn-update": "Aggiornamento",
 	"arenella-recruiter-mp-add-closing-date": "Data di chiusura della posizione",
 	"arenella-recruiter-mp-add-comments": "Commenti",
-	"arenella-recruiter-mp-add-contract": "Contrarre",
+	"arenella-recruiter-mp-add-contract": "Contratto",
 	"arenella-recruiter-mp-add-contract-type": "Tipo di contratto",
 	"arenella-recruiter-mp-add-country": "Paese",
 	"arenella-recruiter-mp-add-description": "Descrizione",
@@ -534,7 +534,7 @@
 	"arenella-recruiter-mp-update-closing": "Data di chiusura della posizione",
 	"arenella-recruiter-mp-update-comments": "Commenti",
 	"arenella-recruiter-mp-update-contact-type": "Tipo di contratto",
-	"arenella-recruiter-mp-update-contract": "Contrarre",
+	"arenella-recruiter-mp-update-contract": "Contratto",
 	"arenella-recruiter-mp-update-country": "Paese",
 	"arenella-recruiter-mp-update-description": "Descrizione",
 	"arenella-recruiter-mp-update-eu": "Unione Europea",
@@ -683,7 +683,7 @@
 	"arenella-suggestions-btn-manage-alert": "Gestisci avvisi",
 	"arenella-suggestions-btn-my-candidates": "I miei candidati",
 	"arenella-suggestions-btn-reset": "Ripristina",
-	"arenella-suggestions-contract": "Contrarre",
+	"arenella-suggestions-contract": "Contratto",
 	"arenella-suggestions-country": "Paese",
 	"arenella-suggestions-dutch": "Olandese",
 	"arenella-suggestions-english": "Inglese",
@@ -825,7 +825,7 @@
 	"info-item-title-availability": "Disponibilità",
 	"info-item-title-available-from": "Disponibile da",
 	"info-item-title-city": "Città",
-	"info-item-title-contract": "Contrarre",
+	"info-item-title-contract": "Contratto",
 	"info-item-title-contract-type": "Tipo di contratto",
 	"info-item-title-country": "Paese",
 	"info-item-title-languages": "Le lingue",
@@ -975,7 +975,7 @@
 	"stat-post-views": "Visualizzazioni della bacheca di lavoro",
 	"stat-todays-logins": "",
 	"static-contract-type-both": "Contratto/Perm",
-	"static-contract-type-contract": "Contrarre",
+	"static-contract-type-contract": "Contratto",
 	"static-contract-type-perm": "Permanenza",
 	"static-country-be": "Belgio",
 	"static-country-eu": "Unione Europea",
