--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Arquitecto de software",
 	"ARCHITECT_SHORT": "Arquitecto",
 	"arenella-accounts-menu-availability": "Disponibilidad",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estonio",
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
+	"expres": "Expres",
 	"failure": "Falla",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandés",
@@ -810,6 +813,7 @@
 	"func-web-dev": "Desarrollador web",
 	"GERMAN": "Alemán",
 	"GERMANY": "Alemania",
+	"go": "Go",
 	"GREECE": "Grecia",
 	"GREEK": "Griego",
 	"Hide": "Esconder",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
+	"ios": "IOS",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutador de TI",
 	"IT_RECRUITER_SHORT": "Reclutamiento",
@@ -849,6 +854,7 @@
 	"ITALY": "Italia",
 	"JAVA_DEV": "Desarrollador Java",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Candidato - CV Actualizado",
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "Candidatos de hoy",
+	"next": "Next",
 	"no": "No",
+	"node": "Node",
 	"NORTH_AMERICA": "América del norte",
 	"NORTHERN_EUROPE": "Europa del Norte",
 	"NORTHERN_IRELAND": "Irlanda del Norte",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Noruega",
 	"ONE_MONTH_SUBSCRIPTION": "1 mes",
 	"PAKISTAN": "Pakistán",
+	"php": "Php",
 	"POLAND": "Polonia",
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Gerente de proyecto",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"ROMANIA": "Rumania",
 	"ROMANIAN": "Rumano",
+	"ruby_on_rails": "Ruby On Rails",
 	"RUSSIAN": "Ruso",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
+	"test-manage": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Pavo",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "Ucranio",
 	"URDU": "Urdu",
 	"US": "EE.UU",
+	"vue": "Vue",
 	"WEB_DEV": "Desarrollador web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidental",
