--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Softwarearchitekt",
 	"ARCHITECT_SHORT": "Architekt",
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estnisch",
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
+	"expres": "Expres",
 	"failure": "Versagen",
 	"FINLAND": "Finnland",
 	"FINNISH": "Finnisch",
@@ -810,6 +813,7 @@
 	"func-web-dev": "Webentwickler",
 	"GERMAN": "Deutsch",
 	"GERMANY": "Deutschland",
+	"go": "Go",
 	"GREECE": "Griechenland",
 	"GREEK": "Griechisch",
 	"Hide": "Verstecken",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " Zu ",
 	"info-item-title-years-experience": "",
+	"ios": "IOS",
 	"IRELAND": "Irland",
 	"IT_RECRUITER": "IT-Recruiter",
 	"IT_RECRUITER_SHORT": "Rekrutierung",
@@ -849,6 +854,7 @@
 	"ITALY": "Italien",
 	"JAVA_DEV": "Java-Entwickler",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Kandidat - Lebenslauf aktualisiert",
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "Die Kandidaten von heute",
+	"next": "Next",
 	"no": "Nein",
+	"node": "Node",
 	"NORTH_AMERICA": "Nordamerika",
 	"NORTHERN_EUROPE": "Nordeuropa",
 	"NORTHERN_IRELAND": "Nordirland",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Norwegen",
 	"ONE_MONTH_SUBSCRIPTION": "1 Monat",
 	"PAKISTAN": "Pakistan",
+	"php": "Php",
 	"POLAND": "Polen",
 	"POLISH": "Polieren",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Projektmanager",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Belgien",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irland",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Irland",
 	"ROMANIA": "Rumänien",
 	"ROMANIAN": "Rumänisch",
+	"ruby_on_rails": "Ruby On Rails",
 	"RUSSIAN": "Russisch",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Schweden",
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
+	"test-manage": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Truthahn",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "Ukrainisch",
 	"URDU": "Urdu",
 	"US": "USA",
+	"vue": "Vue",
 	"WEB_DEV": "Webentwickler",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Westeuropa",
