--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Software Architect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Availability",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estonian",
 	"EU_REMOTE": "Europe - Remote",
 	"EUROPE": "Europe",
+	"expres": "Expres",
 	"failure": "Failure",
 	"FINLAND": "Finland",
 	"FINNISH": "Finnish",
@@ -810,6 +813,7 @@
 	"func-web-dev": "Web Developer",
 	"GERMAN": "German",
 	"GERMANY": "Germany",
+	"go": "Go",
 	"GREECE": "Greece",
 	"GREEK": "Greek",
 	"Hide": "Hide",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "Security Clearance",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
+	"ios": "IOS",
 	"IRELAND": "Ireland",
 	"IT_RECRUITER": "IT Recruiter",
 	"IT_RECRUITER_SHORT": "Recruitment",
@@ -849,6 +854,7 @@
 	"ITALY": "Italy",
 	"JAVA_DEV": "Java Developer",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Candidate - CV Updated",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Todays Candidates",
+	"next": "Next",
 	"no": "No",
+	"node": "Node",
 	"NORTH_AMERICA": "North America",
 	"NORTHERN_EUROPE": "Northern Europe",
 	"NORTHERN_IRELAND": "Northern Ireland",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Norwegen",
 	"ONE_MONTH_SUBSCRIPTION": "1 Month",
 	"PAKISTAN": "Pakistan",
+	"php": "Php",
 	"POLAND": "Poland",
 	"POLISH": "Polish",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Project Manager",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Romanian",
+	"ruby_on_rails": "Ruby On Rails",
 	"RUSSIAN": "Russian",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Sweeden",
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
+	"test-manage": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
 	"TURKEY": "Turkey",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "Ukrainian",
 	"URDU": "Urdu",
 	"US": "USA",
+	"vue": "Vue",
 	"WEB_DEV": "Web Developer",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Western Europe",
