--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Softwarearchitect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estisch",
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
+	"expres": "Expres",
 	"failure": "Fout",
 	"FINLAND": "Finland",
 	"FINNISH": "Fins",
@@ -810,6 +813,7 @@
 	"func-web-dev": "Webontwikkelaar",
 	"GERMAN": "Duitse",
 	"GERMANY": "Duitsland",
+	"go": "Go",
 	"GREECE": "Griekenland",
 	"GREEK": "Grieks",
 	"Hide": "Verbergen",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "Veiligheidsmachtiging",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
+	"ios": "IOS",
 	"IRELAND": "Ierland",
 	"IT_RECRUITER": "IT-recruiter",
 	"IT_RECRUITER_SHORT": "Werving",
@@ -849,6 +854,7 @@
 	"ITALY": "Italie",
 	"JAVA_DEV": "Java-ontwikkelaar",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Kandidaat - CV bijgewerkt",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
+	"next": "Next",
 	"no": "Nee",
+	"node": "Node",
 	"NORTH_AMERICA": "Noord Amerika",
 	"NORTHERN_EUROPE": "Noord-Europa",
 	"NORTHERN_IRELAND": "Noord-Ierland",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Noorwegen",
 	"ONE_MONTH_SUBSCRIPTION": "1 maand",
 	"PAKISTAN": "Pakistan",
+	"php": "Php",
 	"POLAND": "Polen",
 	"POLISH": "Pools",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Projectleider",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"ROMANIA": "Roemenië",
 	"ROMANIAN": "Roemeense",
+	"ruby_on_rails": "Ruby On Rails",
 	"RUSSIAN": "Russisch",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Zweden",
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
+	"test-manage": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
 	"TURKEY": "Kalkoen",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "",
 	"URDU": "Urdu",
 	"US": "VS",
+	"vue": "Vue",
 	"WEB_DEV": "Webontwikkelaar",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "West-Europa",
